hphp/test/quick/ns_invalid_func.php.expectf
HipHop Fatal error: Undefined function: b in %s on line 4
